Add inferred code-formatting tool modules
Add a source-formatting chain that mirrors the inferred code-quality
modules but rewrites sources in place: google-java-format and
palantir-java-format for Java, ktlint -F for Kotlin, and scalafmt for
Scala, wired through InferredSourceFormattingModule. ktlint and scalafmt
activate from their config files; the Java formatter is chosen with
javaFormatter(GOOGLE|PALANTIR) and runs whenever Java sources are present.

A formatter mutates the real source tree, so it cannot use the build's
bound-input change detection. The shared FormatBuildStep keeps its own
per-file SHA-256 record in formatted.properties and re-formats only files
whose content changed since the last format, skipping the rest without
forking the tool. verify() turns a formatter into a CI gate that fails the
build on an unformatted file and writes nothing.

Groovy formatting is deferred for lack of a RELEASE-floatable Maven JAR
formatter. All tools are verified end-to-end with pinned versions.